--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 
     <link id="theme-css" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/mdc-light-deeppurple/theme.css">
 
-	
+	<script src="https://js.stripe.com/v3/"></script>
+
 	
 </head>
 
