--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link id="theme-css" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/mdc-light-deeppurple/theme.css">
 
 	<script src="https://js.stripe.com/v3/"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 	
 </head>
